01-eks-gatekeeper/policies/c-disallow-hostpath.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowHostPath
metadata:
  name: disallow-hostpath
spec:
  enforcementAction: deny
