01-eks-gatekeeper/policies/c-require-runasnonroot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRunAsNonRoot
metadata:
  name: require-runasnonroot
spec:
  enforcementAction: deny
